--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                 text-transform: uppercase; font-family: Arial, Helvetica, sans-serif; font-weight: 400; line-height: 1.5em; font-size: large; white-space: nowrap;
                 user-select: none; pointer-events: none;
             ">
-            Натисніть на екран для отримання доступу до WebAR-буклету «Машина Лейбніца» 
+            Натисніть на екран для
             <br>
-            to enter the experience
+            отримання доступу до
+            <br>
+            WebAR-буклету «Машина Лейбніца»
         </div>
     </div>
 
