--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
                 text-transform: uppercase; font-family: Arial, Helvetica, sans-serif; font-weight: 400; line-height: 1.5em; font-size: large; white-space: nowrap;
                 user-select: none; pointer-events: none;
             ">
-            Натисніть на екран для
-            <br>
-            отримання доступу до
-            <br>
+            Натисніть на екран для<br>
+            отримання доступу до<br>
             WebAR-буклету «Машина Лейбніца»
         </div>
     </div>
